fix extra space at bottom and make side panels collapsible (#39)

--- a/src/AppBar/AppBar.module.css
+++ b/src/AppBar/AppBar.module.css
@@ -7,6 +7,9 @@
     padding: 4px 24px;
     justify-content: space-between;
     align-items: center;
+    position: sticky;
+    top:0;
+    z-index: 100;
 }
 
 .logo {
